fixed running and jumping animation and improved smoothness of speedup background animation: problem is that the speed up is delayed

--- a/styles/style.css
+++ b/styles/style.css
@@ -112,7 +112,7 @@ body {
   box-shadow: inset 0 0 0 50vw rgba(0, 0, 0, 0.473);
   height: 720px;
   width: 4800px;
-  animation: slide 20s linear infinite;
+  animation: slide 60s linear infinite;
   transition: all 100ms ease;
 }
 /* .infinite-scroll.fast {
